k8s/examples/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nutanix-move-repo
  labels:
    app.kubernetes.io/name: nutanix-move-repo
