k8s/examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nutanix-move-repo
  namespace: nutanix-move-repo
  labels:
    app.kubernetes.io/name: nutanix-move-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nutanix-move-repo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nutanix-move-repo
    spec:
      containers:
        - name: nginx
          image: ghcr.io/gdmjoho/move-repo:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
