k8s/examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nutanix-move-repo
  namespace: nutanix-move-repo
  labels:
    app.kubernetes.io/name: nutanix-move-repo
spec:
  selector:
    app.kubernetes.io/name: nutanix-move-repo
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
